--- a/cicd/jenkins/k3d-config.yaml
+++ b/cicd/jenkins/k3d-config.yaml
@@ -7,7 +7,7 @@ kubeAPI:
   hostIP: 0.0.0.0
   hostPort: "6443"
 volumes:
-  - volume: C:\Users\thraa\system-expert\cicd\jenkins\jenkins_data:/data
+  - volume: /home/jens/Desktop/selabs/cicd/jenkins\jenkins_data:/data
     nodeFilters:
       - agent:*
 ports:
